Final Project: Name created, followed by <form id>, <label> and < select id>

--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>WORLD ENCYCLOPEDIA</title>
         <script scr = "script.js" defer></script>
     </head> 
 
     <body> 
+
+    <h2> WORLD ENCYCLOPEDIA</h2>
+    <form id="CountryInfoForm">
+        <label for = "countryselection">Choose a country from the list</label><br>
+        <select id="countryselection"
+        name="countrySelection">
+        </select>
+       
+        
+
 
 
 
