labeled population display

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         <label for="countryInfo">Country Info: </label><br> 
         <div id="flagImg"></div>
 
-        
+        <label for="populationDisplay">Population: </label><br><br>
+        <input type="text" id="populationDisplay" name="populationDisplay"><br><br>
+       
+
 
 
 
