--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     </head> 
 
     <body> 
-
     <h2> WORLD ENCYCLOPEDIA</h2>
     <form id="CountryInfoForm">
         <label for = "countryselection">Choose a country from the list</label><br>
@@ -14,7 +13,7 @@
         name="countrySelection">
         </select>
 
-        <label for="countryInfo">Country Info: </label><br> 
+        <label for="countryInfo">Country Info: </label><br><br>
         <div id="flagImg"></div>
 
         <label for="populationDisplay">Population: </label><br><br>
@@ -23,25 +22,25 @@
         <label for="areaSelection"> Area In: </label><br>
         <select id="areaSelection" name="areaSelection">
             <option value="miles">Sq. Miles</option>
-            <option value="km">Sq. KM</option>
+            <option value="km">Sq. Km</option>
         </select><br>   
     
         <input type="text" id="areaDisplay"
         name="areaDisplay"><br>
 
-        <h2>Area In:</h2>
-
+    <h2>Area In:</h2>
         <input type="radio" name="pUnitSelection"
-        value="Miles"><label for="miles">Per Sq. Mile</label><br>
+        value="miles"><label for="miles">Per Sq. Mile</label><br>
         <input type="radio" name="pUnitSelection"
-        value="Miles"><label for="km">Per Sq. KM</label><br>
+        value="miles"><label for="km">Per Sq. km</label><br>
         <input type="text" id="pDensityDisplay"
         name="pDensityDisplay"><br>
 
-         <h2>Percentage of World Population:</h2>
-         <input type="text" id="pDPercentDisplay" name="pDPercentDisplay"><br>
+    <h2>Percentage of World Population:</h2>
+    <input type="text" id="pDPercentDisplay" name="pDPercentDisplay"><br><br><br> 
 
-         <buttn id="
+    <button id="wikiBtn" onclick="">WikiCountry</button>
+    <button id="quizBtn" onclick="">Launch Quiz</button>
 
 
        
