--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
 
     <body> 
     <h2> WORLD ENCYCLOPEDIA</h2>
-    <form id="CountryInfoForm">
+
+    <form id="countryInfoForm">
         <label for = "countryselection">Choose a country from the list</label><br>
-        <select id="countryselection"
-        name="countrySelection">
-        </select>
+        <select id="countryselection" name="countrySelection" onchange="getCountryInfo()">
+            <option value="Canada">Canada</option>
+            <option value="United States">United States</option>
+            <option value="Bolivia">Bolivia</option>
+        </select><br><br>
 
         <label for="countryInfo">Country Info: </label><br><br>
         <div id="flagImg"></div>
