--- a/index.html
+++ b/index.html
@@ -5,44 +5,43 @@
         <script scr = "script.js" defer></script>
     </head> 
 
-    <body> 
-    <h2> WORLD ENCYCLOPEDIA</h2>
+<body> 
 
-    <form id="countryInfoForm">
-        <label for = "countryselection">Choose a country from the list</label><br>
-        <select id="countryselection" name="countrySelection" onchange="getCountryInfo()">
-            <option value="Canada">Canada</option>
-            <option value="United States">United States</option>
-            <option value="Bolivia">Bolivia</option>
-        </select><br><br>
+<h2> WORLD ENCYCLOPEDIA</h2>
 
-        <label for="countryInfo">Country Info: </label><br><br>
-        <div id="flagImg"></div>
+<form id="countryInfoForm">
+    <label for = "countryselection">Choose a country from the list</label><br>
+    <select id="countryselection" name="countryselection" onchange="getCountryInfo()">
+        <option value="none">Select a country</option>
+        <option value="Canada">Canada</option>
+        <option value="United States">United States</option>
+        <option value="Bolivia">Bolivia</option>
+    </select><br><br>
 
-        <label for="populationDisplay">Population: </label><br><br>
-        <input type="text" id="populationDisplay" name="populationDisplay"><br><br>
+    <label for="countryInfo">Country Info: </label><br><br>
+    <div id="flagImg"></div>
 
-        <label for="areaSelection"> Area In: </label><br>
-        <select id="areaSelection" name="areaSelection">
-            <option value="miles">Sq. Miles</option>
-            <option value="km">Sq. Km</option>
-        </select><br>   
+    <label for="populationDisplay">Population: </label><br><br>
+    <input type="text" id="populationDisplay" name="populationDisplay"><br><br>
+
+    <label for="areaSelection"> Area In: </label><br>
+    <select id="areaSelection" name="areaSelection">
+        <option value="miles">Sq. Miles</option>
+        <option value="km">Sq. Km</option>
+    </select><br>   
     
-        <input type="text" id="areaDisplay"
-        name="areaDisplay"><br>
+    <input type="text" id="areaDisplay"
+     name="areaDisplay"><br>
 
     <h2>Area In:</h2>
-        <input type="radio" name="pUnitSelection"
-        value="miles"><label for="miles">Per Sq. Mile</label><br>
-        <input type="radio" name="pUnitSelection"
-        value="miles"><label for="km">Per Sq. km</label><br>
-        <input type="text" id="pDensityDisplay"
-        name="pDensityDisplay"><br>
+    <input type="radio" name="pUnitSelection" value="miles"><label for="miles">Per Sq. Mile</label><br>
+    <input type="radio" name="pUnitSelection" value="miles"><label for="km">Per Sq. km</label><br>
+    <input type="text" id="pDensityDisplay" name="pDensityDisplay"><br>
 
     <h2>Percentage of World Population:</h2>
     <input type="text" id="pDPercentDisplay" name="pDPercentDisplay"><br><br><br> 
 
-    <button id="wikiBtn" onclick="">WikiCountry</button>
+    <input type="button" id= "wikiBtn" onclick="window.location.href='https://www.google.com';" value="WikiCountry"></button>
     <button id="quizBtn" onclick="">Launch Quiz</button>
 
 
