--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
     </select><br>   
     <input type="text" id="areaDisplay" name="areaDisplay"><br>
 
- <h2>Area In:</h2>
+ <h2>Population Density:</h2>
  <input type="radio" name="pUnitSelection" 
-value="miles" checked><label for="miles">Per Sq. Mile</label><br>
+value="Per Sq. Miles" checked><label for="miles">Per Sq. Mile</label><br>
 
  <input type="radio" name="pUnitSelection" 
- value="km" checked><label for="km">Per Sq. km</label><br>
+ value="Per Sq. Kilometers" checked><label for="km">Per Sq. km</label><br>
 
  <input type="text" id="pDensityDisplay" 
  name="pDensityDisplay" name ="pDensityDisplay"><br>
