determined area by creating a new variable and incorporating it to the for loop alongside population variable. One I determine the area based from selected country, I then write a comment to begin calculating population density in sq km and sq miles. In Addition i did minor tweaks with population density on HTML

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <label for="countryInfo">Country Info: </label>
     <br><br>
-    <div id="flagImg"></div>
+     <div id="flagImg"></div>
 
     <label for="populationDisplay">Population: </label>
     <br><br>
@@ -36,14 +36,12 @@
     <input type="text" id="areaDisplay" name="areaDisplay"><br>
 
  <h2>Population Density:</h2>
- <input type="radio" name="pUnitSelection" 
-value="Per Sq. Miles" checked><label for="miles">Per Sq. Mile</label><br>
-
- <input type="radio" name="pUnitSelection" 
- value="Per Sq. Kilometers" checked><label for="km">Per Sq. km</label><br>
-
- <input type="text" id="pDensityDisplay" 
- name="pDensityDisplay" name ="pDensityDisplay"><br>
+    <input type="radio" name="pUnitSelection" value="Per Sq. Miles" checked><label for="miles">Per Sq. Mile</label>
+    <input type="radio" name="pUnitSelection" value="Per Sq. Kilometers" checked><label for="km">Per Sq. km</label>
+    <br>
+    <br>
+    <input type="text" id="pDensityDisplay" name="pDensityDisplay">
+    
 
  <h2>Percentage of World Population:</h2>
  <input type="text" id="pPercentDisplay" 
