added flags by adding event listener to the select element (javaScript) and added <img id="flagImage" src="" alt="Flag Image"> on HTML  to display on webpage

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 
     <label for="countryInfo">Country Info: </label>
     <br><br>
-     <div id="flagImg"></div>
+     <div id="flagImg">
+        <img id="flagImage" src="" alt="Flag Image"> 
+     </div>
 
     <label for="populationDisplay">Population: </label>
     <br><br>
@@ -44,12 +46,9 @@
     
 
  <h2>Percentage of World Population:</h2>
- <input type="text" id="pPercentDisplay" 
- name="pPercentDisplay"><br><br><br> 
+ <input type="text" id="pPercentDisplay" name="pPercentDisplay"><br><br><br> 
 
- <a href="https://www.google.com" 
- target="_blank" 
- id="wikiPageLink">WikiCountry</a>
+ <a href="https://www.google.com" target="_blank" id="wikiPageLink">WikiCountry</a>
 
     <!----
     <input type="button" id= "wikiBtn" onclick="window.location.href='https://www.google.com';" value="WikiCountry"></button>
