index.css created and linked with index.html. positioned title on top and adjusted body of the webpage

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <title>WORLD DICTIONARY</title>
         <script src="script.js" defer></script>
+        <link rel="stylesheet" href="index.css">
     </head> 
 
 <body> 
 
-<h2>WORLD DICTIONARY</h2>
+<h2 class="center-top">WORLD DICTIONARY</h2>
 
 <form id="countryInfoForm">
  <label for="countrySelection">Choose a country from the list</label><br>
