positioned country info and widened body width

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <option value="Bolivia">Bolivia</option>
  </select><br><br>
 
-    <label for="countryInfo">Country Info: </label>
+    <label class="topleft" for="countryInfo">Country Info: </label>
     <br><br>
      <div id="flagImg">
         <img id="flagImage" src="" alt="Flag Image"> 
