use a css reset to ensure consistent styles across browsers

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </select><br>   
             <input type="text" id="areaDisplay" name="areaDisplay"><br>
 
-        <h2>Population Density:</h2>
+        <h2 class="popDen">Population Density:</h2>
             <input type="radio" name="pUnitSelection" value="Per Sq. Miles" checked><label for="miles">Per Sq. Mile</label>
             <input type="radio" name="pUnitSelection" value="Per Sq. Kilometers" checked><label for="km">Per Sq. km</label>
             <br>
