Fixed the JSON file error and corrected the names of country flags that have spaces

--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
         <h2 class="populationPer">Percentage of World Population:</h2>
         <input type="text" id="pPercentDisplay" name="pPercentDisplay"><br><br><br> 
 
-        <a href="https://www.google.com" target="_blank" id="wikiPageLink">WikiCountry</a>
+        <a href="https://www.google.com" target="_blank" id="wikiPageLink">WikiCountry</a> 
 
-            <!----
-            <input type="button" id= "wikiBtn" onclick="window.location.href='https://www.google.com';" value="WikiCountry"></button>
-            <button id="quizBtn" onclick="">Launch Quiz</button>
-            --->
+
+            <!-- <input type="button" id= "wikiBtn" onclick="window.location.href='https://www.google.com'"; value="WikiCountry"></button>
+            <button id="quizBtn" onclick="">Launch Quiz</button> -->
+            
 
 
         </form>
