Restructured CSS and got rid of style value on HTML

--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
                 <h2 class="center-top">WORLD DICTIONARY</h2>
             </div>
 
-            <div class="left" style="background-color: antiquewhite;">Column</div>
-            <div class="middle" style="background-color: burlywood">
+            <div class="left"">Column</div>
+            <div class="middle" >
                 <form id="countryInfoForm">
                     <div class="card-container">
                         <div class="card1">
-                            <label class="countrylist" for="countrySelection">Choose a country from the list</label>
-                            <br>
+                            <h2 class="countrylist" for="countrySelection">Choose a country from the list</h2>
                             <select class="list" id="countrySelection" name="countrySelection" onchange="getCountryInfo()">
                                 <option value="none">Select a country</option>
                             </select><br><br>
@@ -36,11 +35,11 @@
                             <input type="text" id="populationDisplay" name="populationDisplay">
                             <br><br>
 
-                            <label for="aUnitSelection"> <strong>Area In: </strong></label><br>
+                            <label for="aUnitSelection"> <strong>Area In: </strong></label>
                             <select id="aUnitSelection" name="aUnitSelection">
                                 <option value="miles">Sq. Miles</option>
                                 <option value="km">Sq. Km</option><br>
-                            </select><br><br>
+                            </select><br>
                             <input type="text" id="areaDisplay" name="areaDisplay"><br>
                         </div>
                         <div class="card2">
@@ -62,14 +61,9 @@
                             
                         </div>
                     </div>
-                        
-                        <!----
-                        <input type="button" id= "wikiBtn" onclick="window.location.href='https://www.google.com';" value="WikiCountry"></button>
-                        <button id="quizBtn" onclick="">Launch Quiz</button>
-                        --->
                 </form>           
             </div>
-            <div class="right" style="background-color: antiquewhite;">Column</div>
+            <div class="right">Column</div>
 
             <div class="footer">
                 <p>Footer</p>
