--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>WORLD DICTIONARY</title>
         <script src="script.js" defer></script>
         <link rel="stylesheet" href="index_layout.css">
+        <link rel="icon" type="image/x-icon" href="/favicon/Europe.png">
     </head> 
 
     <body> 
