Background Image bug fixed

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                             
                             <h2 class="popDen">Population Density:</h2>
 
-                            <input class="radio1" type="radio" name="pUnitSelection" value="Per Sq. Miles" checked><label for="miles">Per Sq. Mile</label>
-                            <input class="radio2" type="radio" name="pUnitSelection" value="Per Sq. Kilometers" checked><label for="km">Per Sq. km</label>
+                            <input class="radio1" type="radio" name="pUnitSelection" value="Per Sq. Miles" checked title="Per Sq. Mile"><label for="miles">Per Sq. Mile</label>
+                            <input class="radio2" type="radio" name="pUnitSelection" value="Per Sq. Kilometers" checked title="Per Sq."><label for="km">Per Sq. km</label>
                             <br>
                             <br>
                             <input class="pDensityDisplay" type="text" id="pDensityDisplay" name="pDensityDisplay">
